--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
