--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.927.0",
+    "@aws-sdk/lib-storage": "^3.927.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
     "connect-pg-simple": "^10.0.0",
