--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
   "name": "linkedup-backend",
