--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "express-status-monitor": "^1.2.3",
     "express-validator": "^7.3.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
