--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.927.0",
     "@aws-sdk/lib-storage": "^3.927.0",
+    "@frozenjs/express-status-monitor": "^2025.6.22",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
     "connect-pg-simple": "^10.0.0",
@@ -11,8 +13,8 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
-    "express-status-monitor": "^1.2.3",
     "express-validator": "^7.3.0",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
