--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.927.0",
-    "@aws-sdk/lib-storage": "^3.927.0",
     "@frozenjs/express-status-monitor": "^2025.6.22",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -21,6 +19,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
