--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.3.0",
+    "ffmpeg": "^0.0.4",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
