--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
+    "rate-limit-redis": "^4.3.1",
     "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
